fixed spacing issues in header of leaderboard

--- a/src/styles/less/TrophyRoom.less
+++ b/src/styles/less/TrophyRoom.less
@@ -25,6 +25,8 @@
 .ant-table-thead > tr > th {
   background: #f4f4f4;
   text-align: center;
+  vertical-align: top;
+
 }
 
 .ant-table-thead th.ant-table-column-has-sorters {
@@ -145,4 +147,4 @@
     z-index: 1;
     text-align: center;
   }
-}
+
